iml-services/iml-device/src/virtual_device/snapshots/iml_device__virtual_device__tests__full_oss_test_oss1.local_11.snap
---
source: iml-services/iml-device/src/virtual_device.rs
expression: c
---
{
  "ScsiDevice": {
    "serial": "3600140559cee8670eff45108165135b9",
    "scsi80": "SLIO-ORG ost10           59cee867-0eff-4510-8165-135b9e25a8f8",
    "major": "65",
    "minor": "112",
    "devpath": "/devices/platform/host5/session4/target5:0:0/5:0:0:9/block/sdx",
    "size": 5368709120,
    "filesystem_type": "mpath_member",
    "fs_uuid": "6239272055631508140",
    "fs_label": "ost19",
    "paths": [
      "/dev/disk/by-id/scsi-3600140559cee8670eff45108165135b9",
      "/dev/disk/by-id/wwn-0x600140559cee8670eff45108165135b9",
      "/dev/disk/by-path/fc---lun-9",
      "/dev/disk/by-path/ip-10.73.50.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:oss-lun-9",
      "/dev/disk/by-label/ost19",
      "/dev/disk/by-uuid/6239272055631508140",
      "/dev/sdx"
    ],
    "mount": null,
    "children": [
      {
        "Mpath": {
          "devpath": "/devices/virtual/block/dm-11",
          "serial": "3600140559cee8670eff45108165135b9",
          "scsi80": "SLIO-ORG ost10           59cee867-0eff-4510-8165-135b9e25a8f8",
          "dm_name": "mpatht",
          "size": 5368709120,
          "major": "253",
          "minor": "11",
          "filesystem_type": "zfs_member",
          "fs_uuid": "6239272055631508140",
          "fs_label": "ost19",
          "paths": [
            "/dev/mapper/mpatht",
            "/dev/disk/by-id/dm-name-mpatht",
            "/dev/disk/by-id/dm-uuid-mpath-3600140559cee8670eff45108165135b9",
            "/dev/disk/by-label/ost19",
            "/dev/disk/by-uuid/6239272055631508140",
            "/dev/dm-11"
          ],
          "children": [
            {
              "Zpool": {
                "guid": 6239272055631508140,
                "name": "ost19",
                "health": "ONLINE",
                "state": "ACTIVE",
                "size": 5335154688,
                "vdev": {
                  "Root": {
                    "children": [
                      {
                        "Disk": {
                          "guid": 16932051413805295364,
                          "state": "ONLINE",
                          "path": "/dev/mapper/mpatht",
                          "dev_id": "dm-uuid-mpath-3600140559cee8670eff45108165135b9",
                          "phys_path": null,
                          "whole_disk": false,
                          "is_log": false
                        }
                      }
                    ],
                    "spares": [],
                    "cache": []
                  }
                },
                "props": [],
                "children": [
                  {
                    "Dataset": {
                      "guid": 14524940730282859202,
                      "name": "ost19/ost19",
                      "kind": "filesystem",
                      "props": [
                        {
                          "name": "name",
                          "value": "ost19/ost19"
                        },
                        {
                          "name": "type",
                          "value": "filesystem"
                        },
                        {
                          "name": "creation",
                          "value": "1587638749"
                        },
                        {
                          "name": "used",
                          "value": "3639808"
                        },
                        {
                          "name": "available",
                          "value": "5164673024"
                        },
                        {
                          "name": "referenced",
                          "value": "3639808"
                        },
                        {
                          "name": "compressratio",
                          "value": "1.00x"
                        },
                        {
                          "name": "mounted",
                          "value": "no"
                        },
                        {
                          "name": "quota",
                          "value": "0"
                        },
                        {
                          "name": "reservation",
                          "value": "0"
                        },
                        {
                          "name": "recordsize",
                          "value": "1048576"
                        },
                        {
                          "name": "mountpoint",
                          "value": "/ost19/ost19"
                        },
                        {
                          "name": "sharenfs",
                          "value": "off"
                        },
                        {
                          "name": "checksum",
                          "value": "on"
                        },
                        {
                          "name": "compression",
                          "value": "off"
                        },
                        {
                          "name": "atime",
                          "value": "on"
                        },
                        {
                          "name": "devices",
                          "value": "on"
                        },
                        {
                          "name": "exec",
                          "value": "on"
                        },
                        {
                          "name": "setuid",
                          "value": "on"
                        },
                        {
                          "name": "readonly",
                          "value": "off"
                        },
                        {
                          "name": "zoned",
                          "value": "off"
                        },
                        {
                          "name": "snapdir",
                          "value": "hidden"
                        },
                        {
                          "name": "aclinherit",
                          "value": "restricted"
                        },
                        {
                          "name": "createtxg",
                          "value": "12"
                        },
                        {
                          "name": "canmount",
                          "value": "off"
                        },
                        {
                          "name": "xattr",
                          "value": "sa"
                        },
                        {
                          "name": "copies",
                          "value": "1"
                        },
                        {
                          "name": "version",
                          "value": "5"
                        },
                        {
                          "name": "utf8only",
                          "value": "off"
                        },
                        {
                          "name": "normalization",
                          "value": "none"
                        },
                        {
                          "name": "casesensitivity",
                          "value": "sensitive"
                        },
                        {
                          "name": "vscan",
                          "value": "off"
                        },
                        {
                          "name": "nbmand",
                          "value": "off"
                        },
                        {
                          "name": "sharesmb",
                          "value": "off"
                        },
                        {
                          "name": "refquota",
                          "value": "0"
                        },
                        {
                          "name": "refreservation",
                          "value": "0"
                        },
                        {
                          "name": "guid",
                          "value": "14524940730282859202"
                        },
                        {
                          "name": "primarycache",
                          "value": "all"
                        },
                        {
                          "name": "secondarycache",
                          "value": "all"
                        },
                        {
                          "name": "usedbysnapshots",
                          "value": "0"
                        },
                        {
                          "name": "usedbydataset",
                          "value": "3639808"
                        },
                        {
                          "name": "usedbychildren",
                          "value": "0"
                        },
                        {
                          "name": "usedbyrefreservation",
                          "value": "0"
                        },
                        {
                          "name": "logbias",
                          "value": "latency"
                        },
                        {
                          "name": "dedup",
                          "value": "off"
                        },
                        {
                          "name": "mlslabel",
                          "value": "none"
                        },
                        {
                          "name": "sync",
                          "value": "standard"
                        },
                        {
                          "name": "dnodesize",
                          "value": "auto"
                        },
                        {
                          "name": "refcompressratio",
                          "value": "1.00x"
                        },
                        {
                          "name": "written",
                          "value": "3639808"
                        },
                        {
                          "name": "logicalused",
                          "value": "1846784"
                        },
                        {
                          "name": "logicalreferenced",
                          "value": "1846784"
                        },
                        {
                          "name": "volmode",
                          "value": "default"
                        },
                        {
                          "name": "filesystem_limit",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapshot_limit",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "filesystem_count",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapshot_count",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapdev",
                          "value": "hidden"
                        },
                        {
                          "name": "acltype",
                          "value": "off"
                        },
                        {
                          "name": "context",
                          "value": "none"
                        },
                        {
                          "name": "fscontext",
                          "value": "none"
                        },
                        {
                          "name": "defcontext",
                          "value": "none"
                        },
                        {
                          "name": "rootcontext",
                          "value": "none"
                        },
                        {
                          "name": "relatime",
                          "value": "off"
                        },
                        {
                          "name": "redundant_metadata",
                          "value": "all"
                        },
                        {
                          "name": "overlay",
                          "value": "off"
                        },
                        {
                          "name": "lustre:fsname",
                          "value": "zfsmo"
                        },
                        {
                          "name": "lustre:failover.node",
                          "value": "10.73.20.21@tcp"
                        },
                        {
                          "name": "lustre:index",
                          "value": "19"
                        },
                        {
                          "name": "lustre:mgsnode",
                          "value": "10.73.20.11@tcp:10.73.20.12@tcp"
                        },
                        {
                          "name": "lustre:version",
                          "value": "1"
                        },
                        {
                          "name": "lustre:svname",
                          "value": "zfsmo-OST0013"
                        },
                        {
                          "name": "lustre:flags",
                          "value": "34"
                        }
                      ],
                      "mount": null
                    }
                  }
                ],
                "mount": {
                  "source": "ost19",
                  "target": "/ost19",
                  "fs_type": "zfs",
                  "opts": "rw,xattr,noacl"
                }
              }
            }
          ],
          "mount": null
        }
      }
    ]
  }
}
